# vail-api

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  example-config.toml  pyproject.toml  questdb.Dockerfile
vail_scraper/: __main__.py  app_keys.py  asynk.py  client.py  config.py  enums.py  errors.py  models.py  prometheus.py  router.py  scraper.py
vail_scraper/client/: accelbyte.py  aexlab.py  base.py  epic_games.py
vail_scraper/database/: meilisearch.py  migration_manager.py  quest.py
vail_scraper/database/migrations/: add_cto_scores.py  add_indexes.py  base.py  create_stats_table.py  create_users_table.py  cto_scores_missing_pkey.py  save_stats_independently.py
vail_scraper/models/: accelbyte.py  aexlab.py  meilisearch.py
vail_scraper/routers/: api.py  prometheus.py  raw.py
vail_scraper/routers/api/: v1.py  v2.py
vail_scraper/routers/api/v1/: __init__.py  stats.py  users.py
vail_scraper/routers/api/v2/: __init__.py  game_stats.py  openapi.py  openapi.yaml  stats.py  users.py
vail_scraper/utils/: circuit_breaker.py  cors.py  exclusive_lock.py  rate_limit.py  unique_queue.py
